--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,15 @@ h1 {
   flex-direction: column;
   align-items: center;
 }
-
+.copyright {
+  margin-top: auto;
+  padding: 1rem 0;
+  text-align: center;
+  font-size: 12px;
+  color: rgb(247, 198, 172);
+  padding: 0;
+  font-weight: bold;
+}
 /* Responsive styles */
 @media (max-width: 600px) {
   .container {
