--- a/src/index.css
+++ b/src/index.css
@@ -31,17 +31,18 @@ h1 {
   align-items: center;
 }
 .copyright {
-  margin-top: auto;
-  padding: 1rem 0;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   text-align: center;
   font-size: 0.9rem;
-  color: #fff;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  color: #f4d9ad;
   font-weight: bold;
-  background: rgba(0, 0, 0, 0.5);
   border-radius: 0 0 16px 16px;
   padding: 0.5rem 0;
+  background: none;
+  margin: 0;
 }
 /* Responsive styles */
 @media (max-width: 600px) {
